@@ -2,6 +2,7 @@ Cultibox (1.1.33) precise; urgency=low
     + Remise en forme de l'image de la cultibox sur le logiciel
     + Remise en forme de de l'affichage des différentes partie des logs pour que la page ne bouge plus quand on choisis un affichage par mois ou par jour
     + Ajout d'un texte annoncant la suppréssion en cours d'une base de logs dans la fênetre de suppréssion des logs
+    + Modification de la gestion des mises à jour qui renvoie vers le site cultibox pour le téléchargement des fichiers
 
 -- Yann Genevois <yann.genevois@cultibox.fr> Tue Sep  3 11:43:25 CEST 2013
 
